(11/04/2008)

*** Fixed deadlock in job submission handler caused by stderr not 
    being consumed properly

(08/20/2007)

*** Rimplemented redirection to conform to new things in the
    interfaces

(03/11/2007)

*** Improved the implementation of the execution provider:
    - using readers added an extra layer of unnecessary 
	character manipulation/conversion
	- when there is only file redirection, there was some
	unnecessary task output redirection

(01/28/2006)

*** Updated exceptions in file resource

-----------------------------2.1----------------------------------

(11/28/2006)

*** Updated the file resource implementation

(10/23/2006)

*** made std* relative to the job directory

(10/18/2006)

*** Updated file resource to support createDirectories

(10/05/2006)

*** Added support for environment variables

*** Use the argument array of the specification to avoid tokenization
    based on spaces. This allows passing of arguments that contain spaces
	to the sub-process

(04/29/2005)

*** Don't change to the user's home directory on start-up.
	Default directory is the current directory.

(04/19/2005)

*** Renamed the module from "core-provider-local" to 
	"provider-local"
	
-----------------------------2.0----------------------------------

(03/24/2005)

*** Updated the implementation of
    org.globus.cog.core.impl.file.local.FileResourceImpl.java
    to make it compatible with the changes in its interface
	
-----------------------------1.2----------------------------------
